--- a/src/index..scss
+++ b/src/index..scss
@@ -67,3 +67,11 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.ddd{
+  flex-grow: 1;
+  background:white;
+}
+.blank{
+  flex-grow: 1;
+  background:rgb(191,194,193);
+}
